# zephyr_phyphox-ble

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  LICENSE  README.md
docs/: conf.py  index.rst
examples/simple_experiment/: CMakeLists.txt  experiment.phyphox  prj.conf
examples/simple_experiment/src/: demo_service.cpp  demo_service.hpp  main.cpp
include/: phyphox_ble.hpp
scripts/: phyphox_xml.py
src/: phyphox_ble.cpp
zephyr/: Kconfig  module.yml
